--- a/To- Do/To- Do/Base.lproj/Main.storyboard
+++ b/To- Do/To- Do/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="checkmark" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="1kw-kW-bpv" detailTextLabel="Nr8-I6-UYi" rowHeight="96" style="IBUITableViewCellStyleSubtitle" id="tC4-8f-75x">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" showsReorderControl="YES" accessoryType="checkmark" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="1kw-kW-bpv" detailTextLabel="Nr8-I6-UYi" rowHeight="96" style="IBUITableViewCellStyleSubtitle" id="tC4-8f-75x">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="96"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tC4-8f-75x" id="g9M-sT-RLb">
